Gnome: Fix unreadable text in calendar events

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -5856,6 +5856,19 @@ headerbar .nautilus-window .path-bar-box .subtitle {
   border: 0;
   background-color: #dcdcdc; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label, .color-light .event-popover label {
+  color: #31363d;
+  opacity: 1; }
+.color-light label {
+  color: #31363d;
+  opacity: 1; }
+
+.circular.day {
+  color: #f8f8f8; }
+
 /********
  * Gala *
  *******/
